--- a/scss/main.scss
+++ b/scss/main.scss
@@ -105,41 +105,16 @@ html, body {
     }
 
     &--def {
-        background-color: #FFFAF1;
+        background-color: #EDEDED;
     }
 
     &--bi2 {
-        // background-image: url('../img/bi2_bg2.png'), linear-gradient(180deg, #3E4191 0%, #000000 100%);
-        background-image: linear-gradient(180deg, #3E4191 0%, #000000 100%);
+        background: linear-gradient(180deg, #3E4191 0%, #000000 100%);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-        background-repeat: no-repeat;
-        background-position-x: center;
-        background-position-y: top;
-        background-size: auto;
-        padding-bottom: 30px;
-
-        @media (min-width: 576px) {
-            background-image: url('../img/bi2__bg.png'), linear-gradient(180deg, #3E4191 0%, #000000 100%);
-            background-position-y: 121%, top;
-            background-position-x: 62%, center;
-        }
-
-        @media (min-width: 768px) {
-            background-position-y: 130%, top;
-        }
-
-        @media (min-width: 992px) {
-            padding-bottom: 0;
-        }
-
-        @media (min-width: 1200px) {
-            background-position-y: 125%, top;
-        }
     }
 
     &--bi2-2 {
-        background: #00364E;
-        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        background: #0B2532;
     }
 
     &--vip {
@@ -160,7 +135,8 @@ html, body {
     }
 
     &--speak {
-        background-color: #EDEDED;
+        background-color: #084777;
+        color: #fff;
         padding: 30px 0;
     }
 }
@@ -336,13 +312,48 @@ html, body {
 
 .info {
 
+    &__new {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 100%;
+    }
+
     &__time {
         font-size: 18px;
         font-weight: 700;
         margin-bottom: 10px;
 
         @media (min-width: 992px) {
+            font-size: 30px;
+        }
+    }
+
+    &__red {
+        font-size: 18px;
+        font-weight: 700;
+        line-height: 1.1;
+        color: red;
+        margin-bottom: 20px;
+        margin-top: 10px;
+
+        @media (min-width: 992px) {
             font-size: 24px;
+            margin-bottom: 30px;
+            margin-top: 20px;
+        }
+    }
+
+    &__green {
+        font-size: 18px;
+        line-height: 1.1;
+        color: #009529;
+        font-weight: 700;
+        margin-top: 30px;
+
+        @media (min-width: 992px) {
+            font-size: 22px;
+            margin-top: 50px;
         }
     }
 
@@ -367,24 +378,20 @@ html, body {
         color: #fff;
         position: relative;
         padding-bottom: 0;
-        margin-bottom: 25px;
+        margin-bottom: 15px;
 
         @media (min-width: 768px) {
             padding-bottom: 30px;
         }
 
-        @media (min-width: 992px) {
-            padding-bottom: 50px;
-        }
-
         &-title {
-            font-size: 22px;
+            font-size: 18px;
             line-height: 1.2;
             margin-bottom: 10px;
             font-weight: 700;
 
             @media (min-width: 992px) {
-                font-size: 36px;
+                font-size: 24px;
                 margin-bottom: 25px;
             }
         }
@@ -406,24 +413,22 @@ html, body {
             position: relative;
             max-width: 300px;
             display: block;
-            margin: 20px auto 15px auto;
+            margin: 0 auto;
             width: 100%;
 
             @media (min-width: 768px) {
                 position: absolute;
-                right: -20px;
-                bottom: 100px;
+                right: -15px;
+                bottom: 0;
+                margin: 20px auto 15px auto;
             }
 
             @media (min-width: 992px) {
-                max-width: initial;
-                width: initial;
-                right: -30px;
-                bottom: 20px;
+                right: 30px;
             }
 
             @media (min-width: 1200px) {
-                bottom: 15px;
+                right: 100px;
             }
         }
 
@@ -601,6 +606,31 @@ html, body {
         padding-left: 16px;
         margin-bottom: 15px;
 
+        &--new {
+
+            @media (min-width: 768px) {
+
+                display: flex;
+                justify-content: space-between;
+                padding-left: 0 !important;
+                margin-top: 10px !important;
+            }
+
+            & li {
+                text-align: left !important;
+
+                @media (min-width: 768px) {
+                    text-align: center !important;
+                    display: list-item;
+                    list-style-type: disc !important;
+
+                    &:first-child {
+                        margin-left: 18px;
+                    }
+                }
+            }
+        }
+
         &.text-white {
             padding-left: 0;
 
@@ -681,21 +711,27 @@ html, body {
 
     &__wrap {
         display: flex;
-        align-items: flex-end;
+        align-items: center;
     }
 
     &__spec {
-        font-weight: 200;
-        font-size: 18px;
+        font-weight: 400;
+        font-size: 16px;
+        margin-bottom: 5px;
 
         @media (min-width: 992px) {
-            font-size: 20px;
+            font-size: 18px;
         }
     }
 
     &__group {
         font-weight: 800;
         font-size: 22px;
+        line-height: 1;
+
+        &-min {
+            font-weight: 700;
+        }
 
         @media (min-width: 992px) {
             font-size: 36px;
@@ -1148,6 +1184,11 @@ html, body {
         position: relative;
         transition: .3s;
         position: relative;
+
+        &--small {
+            box-shadow: none;
+            font-size: 16px !important;
+        }
 
         &.vip--3:after {
             color: #000;
@@ -1814,23 +1855,23 @@ html, body {
     }
 
     &__wrap {
-        background-color: #FAEBDB;
+        background-color: #E6021F;
+        color: #fff;
         padding: 50px 10px 30px 10px;
         position: relative;
 
         @media (min-width: 576px) {
-            padding: 60px 10px 20px 10px;
-            height: 240px;
+            padding: 70px 10px 20px 10px;
+            height: 170px;
         }
 
         @media (min-width: 768px) {
-            padding: 80px 10px 20px 10px;
-            height: 260px;
+            padding: 90px 10px 20px 10px;
         }
 
         @media (min-width: 992px) {
-            padding: 110px 10px 50px 10px;
-            height: 270px;
+            padding: 140px 10px 50px 10px;
+            height: 250px;
         }
     }
 
@@ -1838,8 +1879,8 @@ html, body {
         font-size: 35px;
         font-weight: 900;
         position: absolute;
-        left: 10px;
-        top: 5px;
+        left: 25px;
+        top: 15px;
         line-height: 1;
 
         @media (min-width: 576px) {
@@ -1858,20 +1899,12 @@ html, body {
 
     &__text {
         font-weight: 500;
-        font-size: 16px;
+        font-size: 18px;
         line-height: 1.1;
         text-align: center;
 
-        @media (min-width: 576px) {
-            font-size: 14px;
-        }
-
-        @media (min-width: 768px) {
-            font-size: 18px;
-        }
-
         @media (min-width: 992px) {
-            font-size: 20px;
+            font-size: 24px;
         }
     }
 
@@ -2251,5 +2284,210 @@ html, body {
             color: #fff;
             text-align: center;
         }
+    }
+}
+
+.ruleso {
+    display: flex;
+    width: 100%;
+    flex-wrap: wrap;
+
+    @media (min-width: 1200px) {
+        flex-wrap: nowrap;
+    }
+
+    &__title {
+        font-weight: 700;
+        font-size: 20px;
+        color: #000;
+        margin-bottom: 15px;
+        text-align: center;
+        line-height: 1.1;
+
+        @media (min-width: 992px) {
+            font-size: 24px;
+            margin-bottom: 30px;
+        }
+    }
+
+    &__desc {
+        font-size: 18px;
+        margin-bottom: 30px;
+    }
+
+    &__item {
+        flex-grow: 1;
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
+        align-items: center;
+        padding: 0 10px;
+        width: 100%;
+        margin-bottom: 30px;
+
+        @media (min-width: 576px) {
+            width: 33.3333%;
+        }
+
+        @media (min-width: 992px) {
+            width: 20%;
+        }
+
+        &-img {
+            margin-bottom: 7px;
+            width: 105px;
+            height: 105px;
+            text-align: center;
+
+            & img {
+                width: 100%;
+                height: 100%;
+                object-fit: contain;
+            }
+        }
+
+        &-text {
+            font-weight: 700;
+            font-size: 16px;
+            text-align: center;
+            margin-bottom: 15px;
+            line-height: 1;
+
+            @media (min-width: 768px) {
+                height: 64px;
+            }
+
+            @media (min-width: 992px) {
+                height: 96px;
+            }
+
+            @media (min-width: 1200px) {
+                height: 64px;
+            }
+        }
+
+        &-desc {
+            font-size: 14px;
+            line-height: 1;
+            text-align: center;
+        }
+    }
+}
+
+.star {
+
+    &__war {
+        padding: 15px;
+        background-color: #fff;
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        justify-content: center;
+
+        @media (min-width: 576px) {
+            flex-wrap: nowrap;
+            justify-content: flex-start;
+        }
+
+        &-text {
+            font-size: 16px;
+            color: #E6021F;
+            font-weight: 700;
+            line-height: 1;
+            text-align: center;
+
+            @media (min-width: 576px) {
+                text-align: left;
+            }
+
+            @media (min-width: 992px) {
+                font-size: 32px;
+            }
+        }
+
+        & img {
+            width: 60px;
+            height: 60px;
+            object-fit: contain;
+            margin-right: 10px;
+
+            @media (min-width: 768px) {
+                width: 110px;
+                height: 110px;
+                margin-right: 30px;
+            }
+        }
+    }
+
+    &__t {
+        font-weight: 700;
+        line-height: 1;
+        font-size: 18px;
+
+        @media (min-width: 992px) {
+            font-size: 22px;
+        }
+    }
+
+    &__title {
+        color: #fff;
+        font-weight: 700;
+        font-size: 20px;
+        line-height: 1.1;
+        margin-top: 50px;
+        margin-bottom: 30px;
+        text-align: center;
+
+        @media (min-width: 992px) {
+            margin-top: 30px;
+            margin-bottom: 0;
+        }
+
+        @media (min-width: 992px) {
+            font-size: 32px;
+        }
+    }
+
+    &__img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+    }
+
+    &__text {
+        color: #fff;
+        font-weight: 700;
+        font-size: 16px;
+        line-height: 1.1;
+
+        @media (min-width: 992px) {
+            font-size: 22px;
+        }
+        & span {
+            color: green;
+        }
+    }
+
+    &__schema {
+        margin: 15px 0;
+
+        & img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+            cursor: pointer;
+        }
+    }
+}
+
+.till {
+    width: 100%;
+    height: 100%;
+    margin-top: 25px;
+
+    & img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
