--- a/scss/main.scss
+++ b/scss/main.scss
@@ -17,6 +17,7 @@ html, body {
     position: sticky;
     top: 0;
     z-index: 2;
+    border-bottom: 1px solid #ccc;
 
     @media (min-width: 576px) {
         
@@ -2491,3 +2492,66 @@ html, body {
         object-fit: cover;
     }
 }
+
+.mod {
+    width: 300px !important;
+    padding: 15px !important; 
+
+    @media (min-width: 768px) {
+        width: 600px !important;
+        padding: 44px !important;
+    }
+
+    & h2 {
+        color: #FF0000;
+        text-align: center;
+        line-height: 1.1;
+        margin-bottom: 15px;
+        font-size: 22px;
+
+        @media (min-width: 768px) {
+            font-size: 32px;
+        }
+    }
+}
+
+.translate {
+    width: 100%;
+    height: 250px;
+
+    @media (min-width: 576px) {
+        height: 350px;
+    }
+
+    @media (min-width: 768px) {
+        height: 500px;
+    }
+
+    @media (min-width: 992px) {
+        height: 600px;
+    }
+
+    @media (min-width: 1200px) {
+        height: 700px;
+    }
+
+    &__title {
+        font-size: 24px;
+        line-height: 1.2;
+        margin-bottom: 30px;
+
+        @media (min-width: 992px) {
+            font-size: 32px;
+        }
+    }
+
+    &__button {
+        font-weight: 700;
+    }
+}
+
+#translate1 {
+    width: 90%;
+    height: 90%;
+}
+
